@@ -4,6 +4,9 @@ ChangeLog for Privoxy
 *** Since 3.0.3 ***
 - Added jpeg filtering to defend against MS jpeg vulnerability MS04-028
 - Removed the "arbitrary" 1000 filter limit - addresses tracker #911950
+- Thanks to Jindrich Makovicka for a race condition fix for the log 
+  file.  The race condition remains for non-pthread implementations.
+  Reference patch #1175720.
 
 *** Version 3.0.3 ***
 
